Fixes RackHD/docker for Mac

--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -3,19 +3,22 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-    # Boot 2 Docker
-    config.vm.define "b2d" do |target|
-        target.vm.box = "dduportal/boot2docker"
-        target.vm.box_version = "1.10.0"
+    config.vm.define "default" do |target|
+        target.vm.box = "comiq/dockerbox"
+        target.vm.box_version = "1.12.1.1"
 
         target.vm.provider "virtualbox" do |v|
             v.memory = 4096
             v.cpus = 4
-            v.customize ["modifyvm", :id, "--nictype1", "virtio"]
-            v.customize ["modifyvm", :id, "--nicpromisc2", "allow-all"]
+            v.customize ["modifyvm", :id,
+              "--nictype1", "virtio",
+              "--nicpromisc2", "allow-all"
+            ]
         end
 
         target.vm.network "private_network", ip: "172.31.128.1", virtualbox__intnet: "closednet"
+
+        target.vm.network "forwarded_port", guest: 4243, host: 4243, id: "Docker Remote API"
 
         target.vm.network "forwarded_port", guest: 27017, host: 27017, id: "Mongo DB"
         target.vm.network "forwarded_port", guest: 15672, host: 15672, id: "RabbitMQ Management"
@@ -31,11 +34,17 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
         target.vm.synced_folder "..", "/RackHD"
         target.vm.synced_folder '.', '/vagrant', disabled: true
-        # target.vm.synced_folder ".", Dir.pwd, disabled: true
 
         target.vm.provision :shell, inline: <<-SHELL
-          sudo /etc/init.d/docker restart
-          sudo cp -r /var/lib/boot2docker/tls /RackHD/docker/
+          set -e # fail on error
+          set -x # debug commands
+          cp /lib/systemd/system/docker.service /docker.service.bak
+          sed -e \
+            's/ExecStart=.*/ExecStart=\\/usr\\/bin\\/docker daemon -H fd:\\/\\/ -H tcp:\\/\\/0.0.0.0:4243/g' \
+            /lib/systemd/system/docker.service > /docker.service.sed
+          cp /docker.service.sed /lib/systemd/system/docker.service
+          systemctl daemon-reload
+          service docker restart
         SHELL
     end
 end
