--- a/debian/config
+++ b/debian/config
@@ -1,14 +1,10 @@
 #!/bin/bash
 
 # Copyright 2015, EMC, Inc.
-
 set -e
 
 # Source debconf library.
 . /usr/share/debconf/confmodule
-
-# Please specific which dependencies are going to be installed
-db_input high RackHD/DEPENDENCIES || true
 
 # Please specific if you are will to set dhcp
 db_input high RackHD/WILLING_TO_SETUP_DHCP || true
@@ -25,10 +21,7 @@ db_input high RackHD/NIC_NAME || true
 db_go || true
 
 db_get RackHD/NIC_NAME
-if [ "$RET" != "eth1" ]; then
-    echo "[WARNING] RackHD takes the control NIC port as eth1 by default , with IP 172.31.128.0/22. RackHD may not function well if you left all config as default ! "
-    sleep 2
-fi
+NIC_Name=$RET
 
 NIC_IP=$( ifconfig $NIC_Name | grep "inet addr" | awk -F: '{print $2}' | awk '{print $1}' )
 
@@ -37,7 +30,7 @@ if [ "$NIC_IP" != "172.31.128.1" ]; then
     db_input high RackHD/WILLING_TO_FORCE_IP || true
     db_go || true
 
-    de_get RackHD/WILLING_TO_FORCE_IP
+    db_get RackHD/WILLING_TO_FORCE_IP
 
     if [ "$RET" == "true" ] ; then
         sudo echo "\
