--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,8 @@ Architecture: any
 # Rackhd-<> package that the real dependency lives in
 Depends: ${misc:Depends},
          debconf (>= 0.2.26),
+         isc-dhcp-server,
+         lldpd,
          on-dhcp-proxy,
          on-http,
          on-syslog,
@@ -20,6 +22,7 @@ Depends: ${misc:Depends},
          on-tftp,
          python-on-http-redfish-1.0,
          python-on-http-api1.1,
-         python-on-http-api2.0       
+         python-on-http-api2.0,       
+         rabbitmq-server
 Description: base package for all of RackHD
  uber package for all rackhd installation
