add configuration service support and update sub-modules

--- a/packer/ansible/roles/dell/files/wsmanConfig.json
+++ b/packer/ansible/roles/dell/files/wsmanConfig.json
@@ -1,68 +1,6 @@
 {
 	"dell":{
-		"credentials":{
-			"user": "root",
-			"password": "calvin"
-		},		
-		"services":{
-			"bios":{
-				"host": "http://100.68.123.100:9600",
-				"endpoints":{
-					"bios": "/smi/server/ios/bios",
-					"boot": "/smi/server/ios/boot",
-					"biosCallback": "/smi/server/ios/inventory",
-					"callbackUri": "http://_MANAGEMENT_NETWORK_IP_:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
-				}
-			},
-			"discovery":{
-				"host": "http://100.68.123.100:9600",
-				"endpoints":{
-					"discoverIpList": "/smi/discover/ips",
-					"discoverIpRange": "/smi/discover/range"
-				}
-			},
-			"inventory":{
-				"host": "http://100.68.123.100:9600",
-				"endpoints":{
-					"hardware": "/smi/server/hardware",
-					"software": "/smi/server/software",
-					"nics": "/smi/server/nics",
-					"summary": "/smi/server/summary",
-					"chassisDetail": "/smi/chassis/details",
-					"chassisSummary": "/smi/chassis/summary",
-					"serverCallback": "/smi/server/inventory",
-					"chassisCallback": "/smi/chassis/inventory",
-					"callbackUri": "http://_MANAGEMENT_NETWORK_IP_:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
-				}
-			},
-			"management":{
-				"host": "http://100.68.123.100:9600",
-				"endpoints":{
-					"power": "/smi/server/action/power",
-                    "reset": "/wsman/management/reset",
-                    "eject": "/wsman/management/eject"
-				}
-			},
-			"config": {
-				"host": "https://100.68.123.97:8441",
-				"endpoints":{
-					"configureTraps": "/wsman/config/configureTraps",
-					"updateTrapFormat": "/wsman/config/updateTrapFormat",
-					"setTroubleshoot": "/wsman/config/setTroubleShootMode",
-					"clearTroubleshoot": "/wsman/config/clearTroubleShootMode", 
-					"blinkLED": "/wsman/config/startBlinkLED",
-					"stopBlinkLED": "/wsman/config/stopBlinkLED"
-				}
-			},
-			"logistics": {
-				"host": "https://100.68.123.97:8443",
-				"endpoints":{
-					"hypervisorInfo": "/wsman/logistics/hypervisorInfo",
-					"checkLicense": "/wsman/logistics/checkLicense",
-					"getSelLogs": "/wsman/logistics/collectSelLogs",
-					"getLcLogs": "/wsman/logistics/collectLcLogs"
-				}
-			}
-		}
+		"configServerPath": "/smi/server/config/smi/service",
+		"callbackUri": "http://_MANAGEMENT_NETWORK_IP_:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
 	}
 }
