--- a/test/fit_tests/requirements.txt
+++ b/test/fit_tests/requirements.txt
@@ -1,4 +1,17 @@
-requests==2.2.1
+amqp==2.1.1
+backports.ssl-match-hostname==3.5.0.1
+docker-py==1.10.6
+docker-pycreds==0.2.1
+gevent==1.1.2
+greenlet==0.4.10
+ipaddress==1.0.17
+kombu==4.0.0
+nose==1.3.7
 pexpect==3.1
 pika==0.10.0
-nose==1.3.7
+proboscis==1.2.6.0
+requests==2.11.1
+six==1.10.0
+vine==1.1.3
+websocket-client==0.37.0
+wheel==0.24.0
