Checkin for RAC-249-Vagrant-Installer

--- a/test/fit_tests/Vagrantfile
+++ b/test/fit_tests/Vagrantfile
@@ -30,6 +30,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             pip install -r fit_tests/requirements.txt
             cd fit_tests/test/fit_tests
             python run_tests.py -test deploy/rackhd_source_install.py -v 9
+            python run_tests.py -test deploy/rackhd_stack_init.py:rackhd_stack_init.test01_preload_sku_packs -stack vagrant -v 9
         SHELL
     end
 
