temporary build fix for git reset hard failures on UT branch

--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -31,6 +31,7 @@
 - name: Reset to the branch specified
   shell: git reset --hard {{ branch }}
   when: branch is defined
+  ignore_errors: yes
   args:
     chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
   with_items:
