--- a/test/fit_tests/Vagrantfile
+++ b/test/fit_tests/Vagrantfile
@@ -23,6 +23,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         target.ssh.forward_agent = true
         target.vm.provision "shell", inline: <<-SHELL
             git clone https://github.com/RackHD/RackHD fit_tests
+            sudo apt-get -y update
             sudo apt-get -y install python-pip
             sudo apt-get -y install virtualenv
             virtualenv .venv
