rac-282 integrate larval stream-monitors (and log handles)
Change to common/fit_common.py
* bring in new "flogging" (fit-logging) module from stream-monitor plugin space
* adjust run_nose() method to:
** fix: not use lucky-scoping to get access to noseopts variable
** converted invocation to use the nose runner instead of building a monster shell command.
*** env passed in via official api
*** noseargs passed in the same
*** converted from dangerous string to list-of-args
*** interpret success/failure out of nose.run as 0/1 to allow test_runner.py to sys.exit() via it.
* added run_from_module() method (see changes to tests/rackhd11/test_rackhd11_api_catalogs.py)

Everything under stream-monitor is basically the plugin from PR https://github.com/stuart-stanley/nose-observer-plugin/pull/1.
It contains four sub-dirs and some support files. This is implemented as a plugin for nose!
* support files:
** readme, mkenv.sh, and requirements.
* sm_plugin:
** the real plugin base. basically just enough smarts right now to orchestrate telling future stream-sources "test starting!" "test ending!" and so on.
* stream-sources: where all the actual stream "sources" will live. At the moment, this contains a (test harness) logging stream monitor:
** smart enough to detect our local-loggers
** able to inject additional log message to bracket test start/stops
** ...which also means those contact points will be available to use a common scanner (did I see XXX? Yeah? GO BOOM!) and so on.
* flogging is the code for:
** rac-263 (basic log handles for use in test areas)
** rac-264 (granular logging levels)
** this code is meant to be used from fit_tests via common/fit_common.py:get_loggers()

tests/rackhd11/test_rackhd11_api_catalogs.py shows an example conversion:
* bring in the multi-loggers holder
* convert a couple of prints to use them:
** logs.debug -> test run logger default mode
** demo the use of debug_7 (logger levels) vs just "debug"
* convert __name__ module invoker to use new r

--- a/test/fit_tests/Vagrantfile
+++ b/test/fit_tests/Vagrantfile
@@ -30,10 +30,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             sudo apt-get -y update
             sudo apt-get -y install python-pip
             sudo apt-get -y install virtualenv
-            virtualenv .venv
-            source .venv/bin/activate
-            pip install -r fit_tests/requirements.txt
             cd fit_tests/test/fit_tests
+	    ./mkenv.sh vagrant
+	    source myenv_vagrant
             python run_tests.py -test deploy/rackhd_source_install.py -v 9
             python run_tests.py -test deploy/rackhd_stack_init.py:rackhd_stack_init.test01_preload_sku_packs -stack vagrant -v 9
         SHELL
