--- a/test/fit_tests/requirements.txt
+++ b/test/fit_tests/requirements.txt
@@ -1,4 +1,14 @@
-requests==2.2.1
+gevent==1.1.2
+greenlet==0.4.10
+nose==1.3.7
 pexpect==3.1
 pika==0.10.0
-nose==1.3.7
+requests==2.2.1
+# WARNING: do not just replace this file with "pip freeze > requirements.txt".
+# You need to keep the following line as is! (freeze will turn it into
+# a https/git reference)
+-e stream-monitor
+
+# WARNING: there is an ubuntu bug that causes a bad package to get listed when doing a freeze.
+#  Do NOT add 'package-resources==0.0.0' if you see it! I also see 'wheel=nnnnnn' showing up at times.
+#  That's kind of infra also, so don't add it either!
