--- a/test/fit_tests/requirements.txt
+++ b/test/fit_tests/requirements.txt
@@ -1,4 +1,11 @@
-requests==2.2.1
+gevent==1.1.2
+greenlet==0.4.10
+nose==1.3.7
 pexpect==3.1
 pika==0.10.0
-nose==1.3.7
+pkg-resources==0.0.0
+requests==2.2.1
+# WARNING: do not just replace this file with "pip freeze > requirements.txt".
+# You need to keep the following line as is! (freeze will turn it into
+# a https/git reference)
+-e stream-monitor
