adding mib downloads to vagrant image
Signed-off-by: Joe Heck <heckj@mac.com>

--- a/packer/ansible/roles/snmptool/tasks/main.yml
+++ b/packer/ansible/roles/snmptool/tasks/main.yml
@@ -3,4 +3,8 @@
   apt: pkg={{ item }} state=installed
   with_items:
     - snmp
+    - snmp-mibs-downloader
+  sudo: yes
+
+- shell: "download-mibs"
   sudo: yes
