--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -2,6 +2,8 @@ amqp==1.4.8
 anyjson==0.3.3
 kombu==3.0.30
 logging==0.4.9.6
+jsonmerge==1.2.1
+jsonschema==2.4.0
 proboscis==1.2.6.0
 requests==2.9.0
 nose==1.3.7
