--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -7,6 +7,7 @@ jsonschema==2.4.0
 proboscis==1.2.6.0
 requests==2.9.0
 nose==1.3.7
+nosedep>=0.4
 pexpect==3.3
 on-http_api1_1>=1.0.0
 on-http_api2_0>=1.0.2
