--- a/docker/docker-compose-centos.yml
+++ b/docker/docker-compose-centos.yml
@@ -14,8 +14,8 @@ services:
     privileged: true
 
   files:
-    build: "./files"
-    image: "rackhd/files"
+    build: "../on-imagebuilder"
+    image: rackhd/files
     network_mode: "host"
     privileged: true
     volumes:
