--- a/docker/docker-compose-mini.yml
+++ b/docker/docker-compose-mini.yml
@@ -29,8 +29,8 @@ services:
       - "./dhcp/defaults:/etc/defaults"
 
   files:
-    build: "./files"
-    image: "rackhd/files"
+    build: "../on-imagebuilder"
+    image: rackhd/files
     network_mode: "host"
     privileged: true
     volumes:
