--- a/docker/docker-compose-mini.yml
+++ b/docker/docker-compose-mini.yml
@@ -2,21 +2,22 @@
 
 version: '2'
 
-volumes:
-  dhcp-leases:
-    external: false
-
 services:
 
   mongo: # 27017
     image: mongo:latest
     network_mode: "host"
     privileged: true
+    volumes:
+      - "./mongo/db:/data/db"
 
   rabbitmq: # 5672, 15672
     image: rabbitmq:management
     network_mode: "host"
     privileged: true
+    volumes:
+      - "./rabbitmq/mnesia:/data/mnesia"
+      - "./rabbitmq/log:/data/log"
 
   dhcp: # 67/udp
     image: rackhd/isc-dhcp-server
@@ -24,7 +25,7 @@ services:
     network_mode: "host"
     privileged: true
     volumes:
-      - "dhcp-leases:/var/lib/dhcp"
+      - "./dhcp/libdhcp:/var/lib/dhcp"
       - "./dhcp/config:/etc/dhcp"
       - "./dhcp/defaults:/etc/defaults"
 
@@ -59,7 +60,7 @@ services:
     network_mode: "host"
     privileged: true
     volumes:
-      - "dhcp-leases:/var/lib/dhcp"
+      - "./dhcp/libdhcp:/var/lib/dhcp"
       - "./monorail:/opt/monorail"
 
   http: # 9090, 9080
@@ -98,6 +99,7 @@ services:
     network_mode: "host"
     privileged: true
     volumes:
+      - "./dhcp/libdhcp:/var/lib/dhcp"
       - "./monorail:/opt/monorail"
 
   tftp: # 69/udp
