--- a/packer/ansible/roles/pm2/files/rackhd-pm2-config.yml
+++ b/packer/ansible/roles/pm2/files/rackhd-pm2-config.yml
@@ -14,3 +14,6 @@ apps:
    - script: index.js
      name: on-tftp
      cwd: ./src/on-tftp
+   - script: index.js
+     name: on-wss
+     cwd: ./src/on-wss
