RAC-4178 Updates to RackHD/test to cleanup module pathing.
Standardized how RackHD/test finds test and test/common.  This
elimintates the need for inlined 'git-rev-parse' style statements
throughout the code.  Doing the following in an individual test
will set up the module pathing

import fit_path  # NOQA: unused import

The # NOQA: comment at the end of the line is to make pyflakes
not complain about the import appearing to be unused.

At stuart stanley's suggestion, 'git' was removed altogether
as a depedenency for creating import pathing.  Thanks Stuart!

--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -23,6 +23,7 @@ urllib3==1.19.1
 # WARNING: do not just replace this file with "pip freeze > requirements.txt".
 # You need to keep the following line as is! (freeze will turn it into
 # a https/git reference)
+-e fit_path
 -e stream-monitor
 
 # WARNING: there is an ubuntu bug that causes a bad package to get listed when doing a freeze.
