--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -7,7 +7,7 @@ greenlet==0.4.10
 jsonmerge==1.2.1
 jsonschema==2.4.0
 kombu==3.0.30
-pika=0.10.0
+pika==0.10.0
 nose==1.3.7
 nosedep>=0.6
 on-http_api1_1>=1.0.0
