Add functional test for the UCS service.

--- a/packer/ansible/roles/pm2/files/rackhd-pm2-config.yml
+++ b/packer/ansible/roles/pm2/files/rackhd-pm2-config.yml
@@ -14,3 +14,6 @@ apps:
    - script: index.js
      name: on-tftp
      cwd: ./src/on-tftp
+   - script: app.py
+     name: ucs-service
+     cwd: ./src/ucs-service
