config in kibana docker image has been moved location

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -189,4 +189,4 @@ services:
     network_mode: "host"
     privileged: true
     volumes:
-      - "./kibana/config:/opt/kibana/config"
+      - "./kibana/config:/etc/kibana"
