--- a/docker/docker-compose-centos.yml
+++ b/docker/docker-compose-centos.yml
@@ -14,7 +14,7 @@ services:
     privileged: true
 
   files:
-    image: rackhd/files
+    image: rackhd/files:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -26,7 +26,7 @@ services:
     build: "../on-dhcp-proxy"
     depends_on:
       - mongo
-    image: rackhd/on-dhcp-proxy:latest
+    image: rackhd/on-dhcp-proxy:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -38,7 +38,7 @@ services:
     depends_on:
       - files
       - mongo
-    image: rackhd/on-http:latest
+    image: rackhd/on-http:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -49,7 +49,7 @@ services:
     build: "../on-syslog"
     depends_on:
       - mongo
-    image: rackhd/on-syslog:latest
+    image: rackhd/on-syslog:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -60,7 +60,7 @@ services:
     depends_on:
       - mongo
       - syslog
-    image: rackhd/on-taskgraph:latest
+    image: rackhd/on-taskgraph:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -72,7 +72,7 @@ services:
       - files
       - mongo
       - syslog
-    image: rackhd/on-tftp:latest
+    image: rackhd/on-tftp:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
