--- a/docker/docker-compose-mini.yml
+++ b/docker/docker-compose-mini.yml
@@ -29,7 +29,7 @@ services:
       - "./dhcp/defaults:/etc/defaults"
 
   files:
-    image: rackhd/files
+    image: rackhd/files:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -54,7 +54,7 @@ services:
       - dhcp
       - mongo
       - rabbitmq
-    image: rackhd/on-dhcp-proxy:latest
+    image: rackhd/on-dhcp-proxy:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -67,7 +67,7 @@ services:
       - files
       - mongo
       - rabbitmq
-    image: rackhd/on-http:latest
+    image: rackhd/on-http:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -80,7 +80,7 @@ services:
     depends_on:
       - mongo
       - rabbitmq
-    image: rackhd/on-syslog:latest
+    image: rackhd/on-syslog:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -93,7 +93,7 @@ services:
       - mongo
       - rabbitmq
       - syslog
-    image: rackhd/on-taskgraph:latest
+    image: rackhd/on-taskgraph:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
@@ -106,7 +106,7 @@ services:
       - mongo
       - rabbitmq
       - syslog
-    image: rackhd/on-tftp:latest
+    image: rackhd/on-tftp:${TAG}
     network_mode: "host"
     privileged: true
     volumes:
