Revert "use newly build rackhd/files image instead of download directly"
This reverts commit 1d8b2c5c40d121336644678298727741c9f42edd.

Conflicts:
	docker/docker-compose-centos.yml
	docker/docker-compose-mini.yml
	docker/docker-compose.yml

--- a/docker/docker-compose-mini.yml
+++ b/docker/docker-compose-mini.yml
@@ -30,6 +30,7 @@ services:
 
   files:
     image: rackhd/files:${TAG}
+    build: "./files"
     network_mode: "host"
     privileged: true
     volumes:
