in packer ansible: add rackhd install log and version check

--- a/packer/ansible/roles/rackhd-builds/tasks/aptitude_install_rackhd.yml
+++ b/packer/ansible/roles/rackhd-builds/tasks/aptitude_install_rackhd.yml
@@ -22,3 +22,7 @@
     exit [lindex $result 3]
   args:
     executable: /usr/bin/expect
+  register: install_rackhd
+
+- name: RackHD Installation Log
+  debug: msg="{{ install_rackhd.stdout }}"
