--- a/packer/ansible/roles/dell/files/wsmanConfig.json
+++ b/packer/ansible/roles/dell/files/wsmanConfig.json
@@ -1,9 +1,12 @@
 {
 	"dell":{
-		"configServerPath": "/api/smi/uri",
-		"wsmanCallbackUri": "http://172.31.128.1:9988/api/2.0/wsmanCallback/_IDENTIFIER_",
+		
+		"configServerPath": "/smi/config/service",
+		"wsmanCallbackUri": "http://172.31.128.1:9988/api/1.1/wsmanCallback/_IDENTIFIER_",
 		
  		"services":{
+ 			
+ 		
 			"firmwareUpdate":{
 				"host": "http://100.68.124.107:8080",
 				"endpoints":{
@@ -15,7 +18,19 @@
 					"updater":    "/v1/duse/updater/",
 					"callbackUri": "http://100.68.124.106:9988/api/1.1/wsmanCallback/_IDENTIFIER_"
 				}
-			}
-		}
-	}
+			},
+
+
+          "powerThermalMonitoring":{
+	        
+        	 "host": "http://100.64.23.35:46019",
+        	  "endpoints" : {
+		           "apiVersion": "/api/1.0/version",
+		           "powerthermal": "/api/1.0/powerthermal"
+		       
+	          }
+		   }
+
+ 		}
+    }
 }
